# PromptRail

./: README.md  check.py
Planning/Resources/Development Timeline/: PromptRail_Phase_Timeline.docx
Planning/Resources/Researches/: Architecting PromptRail_ Enterprise Endpoint Security for Shadow AI Detection and Prevention.docx  PromptRail Architecture and Implementation v1.0.docx  PromptRail_v1.3_Final.docx
Planning/Resources/Tech Stack/: PromptRail_Tech_Stack.docx
Test Cases/: Workflow-1.md  check.txt
Testing Command/: commands.txt
backup/: Cargo.toml
promptrail-linux/: Cargo.toml  REVIEW.md  changelog.md  rust-toolchain.toml
promptrail-linux/.github/actions/setup-ebpf-toolchain/: action.yml
promptrail-linux/.github/workflows/: ci.yml
promptrail-linux/promptrail-common/: Cargo.toml
promptrail-linux/promptrail-common/src/: lib.rs
promptrail-linux/promptrail-daemon/: Cargo.toml  build.rs
promptrail-linux/promptrail-daemon/offset_discovery/: mod.rs
promptrail-linux/promptrail-daemon/src/: error.rs  main.rs  proc_watch.rs
promptrail-linux/promptrail-daemon/src/offset_discovery/: disasm.rs  mod.rs  pattern.rs
promptrail-linux/promptrail-ebpf/: Cargo.toml  rust-toolchain.toml
promptrail-linux/promptrail-ebpf/src/: main.rs
promptrail-linux/promptrail-linux/: .gitignore  README.md
promptrail-linux/promptrail-linux/promptrail-ebpf/src/: main.rs
promptrail-linux/promptrail-linux/promptrail-test-harness/: Cargo.toml
promptrail-linux/promptrail-test-harness/src/: main.rs
promptrail-linux/tools/: ws2_diag.py  ws2_xref.py
